@@ -4708,5 +4708,40 @@ COMMENT ON TABLE payment_links IS $$
  This reasoning is hacky and i hope it can dissapear when we get to 1.4 - D.M.
 $$;
 
+CREATE TABLE trial_balance__yearend_types (
+    type text primary key
+);
+INSERT INTO trial_balance__yearend_types (type) 
+     VALUES ('none'), ('all'), ('last');
+
+
+CREATE TABLE trial_balance (
+    id serial primary key,
+    date_from date, 
+    date_to date,
+    description text NOT NULL,
+    yearend text not null references trial_balance__yearend_types(type)
+);
+
+CREATE TABLE trial_balance__account_to_report (
+    report_id int not null references trial_balance(id),
+    account_id int not null references account(id)
+);
+
+CREATE TABLE trial_balance__heading_to_report (
+    report_id int not null references trial_balance(id),
+    heading_id int not null references account_heading(id)
+);
+
+CREATE TYPE trial_balance__entry AS (
+    id int,
+    date_from date,
+    date_to date,
+    description text,
+    yearend text,
+    heading_id int,
+    accounts int[]
+);
+
 ALTER TABLE cr_report_line ADD FOREIGN KEY(ledger_id) REFERENCES acc_trans(entry_id);
 commit;
